--- a/Cars/view/frontend/templates/cars.phtml
+++ b/Cars/view/frontend/templates/cars.phtml
@@ -29,8 +29,8 @@ if (count($cars) > 0): ?>
             <td><?= $car->getCarReleaseYear() ?></td>
             <td><?= $car->getCarCreatedAt() ?></td>
             <td><?= $car->getCarUpdatedAt() ?></td>
-            <td><a href="<?= $block->escapeUrl($block->getEditUrl($car->getId())) ?>"><?= __("Edit") ?></a></td>
-            <td><a href="<?= $block->escapeUrl($block->getDeleteUrl($car->getId())) ?>"><?= __("Delete") ?></a></td>
+            <td><a href="<?= $block->escapeUrl($block->getEditUrl($car->getId())) ?>" class="btn_a action primary" style="color: #B2D0F7"><?= __("Edit") ?></a></td>
+            <td><a href="<?= $block->escapeUrl($block->getDeleteUrl($car->getId())) ?>" class="btn_a action primary" style="color: black"><?= __("Delete") ?></a></td>
         </tr>
     <?php endforeach; ?>
 </table>
@@ -38,5 +38,5 @@ if (count($cars) > 0): ?>
     <h1><?= __("This is no car to display.") ?></h1>
 <?php endif;?>
     <hr />
-<a href="<?= $block->getAddUrl()?>" class="btn_a">Add car</a>
+<a href="<?= $block->getAddUrl()?>" class="btn_a action primary">Add car</a>
 
