--- a/Cars/view/frontend/templates/cars_add.phtml
+++ b/Cars/view/frontend/templates/cars_add.phtml
@@ -5,24 +5,17 @@
     <h1 style="display:inline;">Car Add</h1>
 
     <hr>
-<!--    <label>Car ID</label><input id="car_id" type="text" name="car_id"/>-->
-<!--    <br />-->
-    <label>Car Model</label><input id="car_model" type="text" name="car_model"/>
+    <label>Car Model</label><input id="car_model" type="text" name="car_model" required/>
     <br />
-    <label>Car Manufacturer</label><input id="car_manufacturer" type="text" name="car_manufacturer"/>
+    <label>Car Manufacturer</label><input id="car_manufacturer" type="text" name="car_manufacturer" required/>
     <br />
-    <label>Car Release Year</label><input id="car_release_year" type="text" name="car_release_year"/>
+    <label>Car Release Year</label><input id="car_release_year" type="text" name="car_release_year" required/>
     <br />
-    <label>Car Description</label><input id="car_description" type="text" name="car_description"/>
+    <label>Car Description</label><input id="car_description" type="text" name="car_description" required/>
     <br />
-<!--    <label>Car Created At</label><input id="car_created_at" type="text" name="car_created_at"/>-->
-<!--    <br />-->
-<!--    <label>Car Updated At</label><input id="car_updated_at" type="text" name="car_updated_at"/>-->
-<!--    <br />-->
-
     <br />
     <br />
 
-    <a href="<?= $block->getCancelUrl() ?>" class="btn_a">CANCEL</a>
-    <input class="btn-r" type="submit" id="Save" name="Save" value="SAVE"/>
+    <a href="<?= $block->getCancelUrl() ?>" class="btn_a action-primary">CANCEL</a>
+    <input class="action-primary" type="submit" id="Save" name="Save" value="SAVE"/>
 </form>
