--- a/Cars/view/frontend/templates/cars_edit.phtml
+++ b/Cars/view/frontend/templates/cars_edit.phtml
@@ -9,18 +9,18 @@ $cars = $block->getOutData();
     <h1 style="display:inline;">Car Update</h1>
 
     <hr>
-    <label>Car Model</label><input id="car_model" type="text" name="car_model" value="<?= $block->escapeHtml($cars['car_model']) ?>"/>
+    <label>Car Model</label><input id="car_model" type="text" name="car_model" value="<?= $block->escapeHtml($cars['car_model']) ?>" required/>
     <br />
-    <label>Car Manufacturer</label><input id="car_manufacturer" type="text" name="car_manufacturer" value="<?= $block->escapeHtml($cars['car_manufacturer']) ?>"/>
+    <label>Car Manufacturer</label><input id="car_manufacturer" type="text" name="car_manufacturer" value="<?= $block->escapeHtml($cars['car_manufacturer']) ?>" required/>
     <br />
-    <label>Car Release Year</label><input id="car_release_year" type="text" name="car_release_year" value="<?= $block->escapeHtml($cars['car_release_year']) ?>"/>
+    <label>Car Release Year</label><input id="car_release_year" type="text" name="car_release_year" value="<?= $block->escapeHtml($cars['car_release_year']) ?>" required/>
     <br />
-    <label>Car Description</label><input id="car_description" type="text" name="car_description" value="<?= $block->escapeHtml($cars['car_description']) ?>"/>
-    <br />
-
-    <br />
+    <label>Car Description</label><input id="car_description" type="text" name="car_description" value="<?= $block->escapeHtml($cars['car_description']) ?>" required/>
     <br />
 
-    <a href="<?= $block->getCancelUrl() ?>" class="btn_a">CANCEL</a>
-    <input class="btn-r" type="submit" id="Update" name="Update" value="UPDATE"/>
+    <br />
+    <br />
+
+    <a href="<?= $block->getCancelUrl() ?>" class="btn_a action-primary">CANCEL</a>
+    <input class="action-primary" type="submit" id="Update" name="Update" value="UPDATE"/>
 </form>
