--- a/Cars/view/frontend/web/css/source/_module.less
+++ b/Cars/view/frontend/web/css/source/_module.less
@@ -1,24 +1,11 @@
 a.btn_a{
     float:right;
-    background: #e5e5e5;
-    color: #000;
-    padding: 3px 5px 3px 5px;
+    color: #fff;
     text-decoration: none;
-    border:1px solid #000;
-    border-radius: 3px;
-    margin-right: 20px;
-    margin-top: 5px;
-    font: 14px Arial;
-}
-.btn-r {
-    float:right;
-    margin-right: 20px;
-    margin-top: 5px;
-    border: 1px solid #000;
-    background: #e5e5e5;
-    color: #000;
-    padding: 3px 5px 3px 5px;
-    border-radius: 3px;
-    font: 14px Arial;
-    cursor: pointer;
+    font-family: 'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
+    font-weight: 600;
+    padding: 7px 15px;
+    font-size: 1.4rem;
+    box-sizing: border-box;
+    vertical-align: middle;
 }
