--- a/Cars/view/frontend/layout/voronin_cars_add_index.xml
+++ b/Cars/view/frontend/layout/voronin_cars_add_index.xml
@@ -5,7 +5,7 @@
     <body>
 
         <referenceContainer name="content">
-            <block class="Voronin\Cars\Block\Add" name="Voronin_Cars" template="Voronin_Cars::cars_add.phtml" />
+            <block name="Voronin_Cars" template="Voronin_Cars::cars_add.phtml" />
         </referenceContainer>
     </body>
 </page>
