--- a/Cars/view/frontend/layout/voronin_cars_edit_index.xml
+++ b/Cars/view/frontend/layout/voronin_cars_edit_index.xml
@@ -4,7 +4,11 @@
         xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
         <referenceContainer name="content">
-            <block class="Voronin\Cars\Block\Edit" name="Voronin_Cars" template="Voronin_Cars::cars_edit.phtml" />
+            <block name="Voronin_Cars" template="Voronin_Cars::cars_edit.phtml" >
+                <arguments>
+                    <argument name="view_model_cars_edit" xsi:type="object">Voronin\Cars\ViewModel\MyViewModelCarsEdit</argument>
+                </arguments>
+            </block>
         </referenceContainer>
     </body>
 </page>
