--- a/Cars/view/frontend/templates/cars_add.phtml
+++ b/Cars/view/frontend/templates/cars_add.phtml
@@ -1,5 +1,5 @@
 <?php
-
+/** @var \Voronin\Cars\Block\Template $block */
 ?>
 <form id="car_form" method="post" action="<?= $block->getUrl('cars/save') ?>">
     <h1 style="display:inline;">Car Add</h1>
