--- a/Cars/view/frontend/templates/cars_edit.phtml
+++ b/Cars/view/frontend/templates/cars_edit.phtml
@@ -3,6 +3,8 @@
 /** @var $viewModelCarsEdit \Voronin\Cars\ViewModel\MyViewModelCarsEdit */
 $viewModelCarsEdit = $block->getViewModelCarsEdit();
 $cars = $viewModelCarsEdit->getOutData();
+//var_dump($cars);
+//exit();
 ?>
 
 
